add ventas endpoint
