# server/v1/api/index.route.js
@@ -4,6 +4,7 @@ import carreraRoutes from './carrera.route';
 import promocionRoutes from './promocion.route';
 import productRoutes from './product.route';
 import carreraFechaRoutes from './carrera_fecha.route';
+import ventaRoutes from './venta.route';
 const router = express.Router(); // eslint-disable-line new-cap
 
 /** GET /health-check - Check service health */
@@ -19,6 +20,7 @@ router.use('/carrera', carreraRoutes);
 router.use('/promocion', promocionRoutes);
 router.use('/product', productRoutes);
 router.use('/carrera/fecha', carreraFechaRoutes);
+router.use('/ventas', ventaRoutes);
 
 
 export default router;
