# server/v1/api/venta.route.js
@@ -1,0 +1,17 @@
+import express from 'express';
+import validate from 'express-validation';
+import expressJwt from 'express-jwt';
+import paramValidation from '../../../config/param-validation';
+import ventaController from '../application/venta.controller';
+
+
+const router = express.Router(); // eslint-disable-line new-cap
+
+/**
+ * GET /api/promocion
+ */
+router.route('/')
+  .get(ventaController.getSales)
+  .post(ventaController.addSale);
+
+export default router;
