# server/v1/domain/venta.model.ts
@@ -1,8 +1,19 @@
 import { CalendarDate } from './calendar_date.model';
-
+import { Producto } from './producto.model';
+import { ValorMonetario } from './valor_monetario.model';
 export class ReporteVenta {
 
   fecha: CalendarDate;
-  totalVenta: number;
+  producto: Producto;
+  totalVenta: ValorMonetario;
+  cantidad: number;
+
+  constructor(fecha: string, producto: Producto, valor: number, cantidad: number ) {
+    this.fecha = new CalendarDate(new Date(fecha));
+    this.producto = producto;
+    this.totalVenta = new ValorMonetario('GTQ', valor);
+    this.cantidad = cantidad;
+  }
+
 
 }
