# server/v1/event_sourcing/receiver.js
@@ -4,7 +4,7 @@ var request = require('request');
 
 amqp.connect('amqp://localhost', function(err, conn) {
   conn.createChannel(function(err, ch) {
-    var q = 'receive_products';
+    var q = 'receive_sales';
 
     ch.assertQueue(q, {durable: false});
     console.log(" [*] Waiting for messages in %s. To exit press CTRL+C", q);
@@ -14,12 +14,12 @@ amqp.connect('amqp://localhost', function(err, conn) {
       console.log(content);
       // send post to api
       var options = { method: 'POST',
-        url: 'http://localhost:3000/api/product',
+        url: 'http://localhost:3000/api/ventas',
         headers:
          { 'postman-token': 'bd4c0a5f-1a2a-eef3-c955-fc614d4cbeb9',
            'cache-control': 'no-cache',
            'content-type': 'application/json' },
-        body: { nombre: content.name, precio: content.price, moneda: content.currency },
+        body: content,
         json: true };
 
       request(options, function (error, response, body) {
